[package]
name = "quicssh-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
quic = "0.0.3"
quinn = "0.10.2"
rand = "0.8.5"
rcgen = "0.12.1"
rsa = "0.9.6"
x509-ocsp = "0.2.1"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
